<resources>
    <string name="app_name">HeyIndia</string>
    <string name="heyindia">Hey India</string>
    <string name="sign_up_here">Don\'t have account? Sign Up</string>
    <string name="heyindia_logo">HeyIndia Logo</string>
    <string name="log_in_with_aadhaar">Log In with Aadhaar</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hey India</string>
    <string name="nav_header_subtitle">heyindia01@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign Up</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="feedback">Write Us</string>
    <string name="logout">Log Out</string>
</resources>
