<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_background"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <RelativeLayout
            android:id="@+id/login_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="100dp"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <EditText
                        android:id="@+id/loginEmailField"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:drawableStart="@drawable/ic_person_black_"
                        android:hint="Email ID"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/loginpasswordField"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:drawableStart="@drawable/ic_lock_black_"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/loginBtnSubmit"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/login_btn_back"
                    android:text="@string/log_in"
                    android:layout_marginTop="16dp"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/create_acount_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="serif-monospace"
                    android:text="@string/don_t_have_account_sign_up"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

        <ImageView
            android:id="@+id/loginHeyIndiaLogo"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:scaleType="fitXY"
            android:src="@drawable/nav_header_icon" />

        <Button
            android:id="@+id/loginBtnAadhaar"
            android:layout_below="@+id/login_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in_with_aadhaar"
            android:background="@drawable/rlayout"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="false"/>

    </RelativeLayout>

</ScrollView>